// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Default 1`] = `
<div>
  <div
    class="cardRoot"
    id="key1"
    style="left: 84px; top: 228px; height: -38px;"
  >
    <div
      class="card"
    >
      <div>
        <div
          class="text"
        >
          とんこつラーメン
          <br />
          油そば野菜油 
          <a
            class="linkified"
            href="http://google.com"
            target="_blank"
          >
            google.com
          </a>
           増し増しスペシャル
          <br />
          うどん
        </div>
      </div>
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots CardInner headline 1`] = `
<div
  style="position: absolute; width: 10rem; height: 0px;"
>
  <div
    style="position: absolute; cursor: pointer; width: 100%; background-color: rgb(255, 255, 255); border: 1px solid #efefef; line-height: 0; text-align: left; padding: 0.5rem;"
  >
    <div>
      <h2
        class="headline"
      >
        ほげほげ
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots CardInner image 1`] = `
<div
  style="position: absolute; width: 10rem; height: 0px;"
>
  <div
    style="position: absolute; cursor: pointer; width: auto; background-color: transparent; line-height: 0; text-align: left; padding: 0px;"
  >
    <div>
      <img
        class="image"
        src="https://i.gyazo.com/4215f0df9b4c256b39afd12327f40277.png"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots CardInner ordered-list 1`] = `
<div
  style="position: absolute; width: 10rem; height: 0px;"
>
  <div
    style="position: absolute; cursor: pointer; width: 100%; background-color: rgb(255, 255, 255); border: 1px solid #efefef; line-height: 0; text-align: left; padding: 0.5rem;"
  >
    <div>
      <ol
        class="list"
      >
        <li
          class="item is-0"
        >
          ああああ
        </li>
        <li
          class="item is-1"
        >
          いいいい
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots CardInner table 1`] = `
<div
  style="position: absolute; width: auto; min-width: 11.25rem; height: 0px;"
>
  <div
    style="position: absolute; cursor: pointer; width: auto; background-color: rgb(255, 255, 255); border: 1px solid #efefef; line-height: 0; text-align: left; padding: 0.5rem;"
  >
    <div>
      <table
        class="table"
        style="width: 360px;"
      >
        <tbody>
          <tr
            class="row"
          >
            <td
              class="cell"
            >
              <a
                class="linkified"
                href="http://google.com"
                target="_blank"
              >
                google.com
              </a>
            </td>
            <td
              class="cell"
            >
              アイコス
            </td>
            <td
              class="cell"
            >
              レイガン
            </td>
          </tr>
          <tr
            class="row"
          >
            <td
              class="cell"
            >
              理解者
            </td>
            <td
              class="cell"
            >
              鉄球の上に
            </td>
            <td
              class="cell"
            >
              瓶ビール
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots CardInner text 1`] = `
<div
  style="position: absolute; width: 10rem; height: 0px;"
>
  <div
    style="position: absolute; cursor: pointer; width: 100%; background-color: rgb(255, 255, 255); border: 1px solid #efefef; line-height: 0; text-align: left; padding: 0.5rem;"
  >
    <div>
      <div
        class="text"
      >
        ほげほげ
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CardInner twitter 1`] = `
<div
  style="position: absolute; width: 10rem; height: 0px;"
>
  <div
    style="position: absolute; cursor: pointer; width: auto; background-color: rgb(255, 255, 255); border: 1px solid #efefef; line-height: 0; text-align: left; padding: 0px 0.5rem;"
  >
    <div>
      <div
        class="tweet"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CardInner url 1`] = `
<div
  style="position: absolute; width: 10rem; height: 0px;"
>
  <div
    style="position: absolute; cursor: pointer; width: 100%; background-color: rgb(255, 255, 255); border: 1px solid #efefef; line-height: 0; text-align: left; padding: 0.5rem;"
  >
    <div>
      <span
        class="text"
      >
        <a
          class="linkified"
          href="https://postalk.io"
          target="_blank"
        >
          https://postalk.io
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots CardInner webpage 1`] = `
<div
  style="position: absolute; width: 10rem; height: 0px;"
>
  <div
    style="position: absolute; cursor: pointer; width: 100%; background-color: rgb(255, 255, 255); border: 1px solid #efefef; line-height: 0; text-align: left; padding: 0.5rem;"
  >
    <div>
      <span
        class="url"
      >
        

        <img
          class="url__favicon"
          src="https://d247fv9ioqt5ap.cloudfront.net/apple-touch-icon.png"
        />
        

        <span
          class="url__sitetitle"
        >
          postalk
        </span>
        

        <a
          class="url__title"
          href="https://postalk.io"
          target="_blank"
        >
          postalk | オンラインの議論を加速させるカード型チャットツール
        </a>
        

        <div
          class="url__description"
        >
          postalk はカードを並べてコミュケーションができるオンラインツールです。リモートワークでの遠隔ミーティング・画像を使った議論などに最適です。
        </div>
        

        <img
          class="url__img"
          src="https://d247fv9ioqt5ap.cloudfront.net/images/ogimage.png"
        />
        

      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots CardInner youtube 1`] = `
<div
  style="position: absolute; width: 10rem; height: 0px;"
>
  <div
    style="position: absolute; cursor: pointer; width: auto; background-color: transparent; line-height: 0; text-align: left; padding: 0px;"
  >
    <div>
      <iframe
        allowfullscreen="allowfullscreen"
        frameborder="0"
        height="282"
        src="https://www.youtube.com/embed/sa-TUpSx1JA?enablejsapi=1"
        type="text/html"
        width="500"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots CardInput Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    <div
      style="width: 300px;"
    >
      <textarea
        class="input"
        placeholder="Type something here..."
        style="resize: none; overflow: hidden; height: 30px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards Default 1`] = `
<div
  class="board"
>
  <div
    class="canvas"
  >
    <div
      class="cardRoot isDisabled"
      id="key1"
      style="left: 84px; top: 228px; height: -38px;"
    >
      <div
        class="card"
      >
        <div>
          <div
            class="text"
          >
            とんこつラーメン
            <br />
            油そば野菜油 
            <a
              class="linkified"
              href="http://google.com"
              target="_blank"
            >
              google.com
            </a>
             増し増しスペシャル
            <br />
            うどん
          </div>
        </div>
         
        <!---->
      </div>
       
      <!---->
       
      <div
        class="disabled-text"
      >
        selected by someone
      </div>
    </div>
    <div
      class="cardRoot"
      id="key2"
      style="left: 404px; top: 132px; height: -38px;"
    >
      <div
        class="card"
        style="background-color: rgb(255, 166, 166); border-color: #f39393;"
      >
        <div>
          <h2
            class="headline"
          >
            適当に遊んで暮らす
          </h2>
        </div>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
    <div
      class="cardRoot isDisabled"
      id="key3"
      style="left: 84px; top: 132px; height: -38px;"
    >
      <div
        class="card"
        style="background-color: rgb(156, 232, 232); border-color: #8ee8e8;"
      >
        <div>
          <h2
            class="headline"
          >
            福岡でなに食べるか
          </h2>
        </div>
         
        <!---->
      </div>
       
      <!---->
       
      <div
        class="disabled-text"
      >
        selected by someone
      </div>
    </div>
    <div
      class="cardRoot"
      id="key4"
      style="left: 404px; top: 228px; height: -38px;"
    >
      <div
        class="card"
      >
        <div>
          <div
            class="text"
          >
            <a
              class="linkified"
              href="http://google.com"
              target="_blank"
            >
              google.com
            </a>
             ようやくの思池がある&lt;script&gt;alert("aaa")&lt;/script&gt;。吾輩は池に坐ってて見た。別 （ ふんべつ ） も出ない。
          </div>
        </div>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
    <div
      class="cardRoot"
      id="key5"
      style="left: 724px; top: 132px; height: -38px;"
    >
      <div
        class="card"
        style="background-color: rgb(253, 249, 155); border-color: #f9f116;"
      >
        <div>
          <h2
            class="headline"
          >
            My Profile
          </h2>
        </div>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
    <div
      class="cardRoot isImage"
      id="key6"
      style="left: 724px; top: 228px; height: -38px;"
    >
      <div
        class="card"
        style="width: -42px; height: -42px;"
      >
        <div>
          <img
            class="image"
            src="https://i.gyazo.com/4215f0df9b4c256b39afd12327f40277.png"
          />
        </div>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
    <div
      class="cardRoot isTable"
      id="key7"
      style="left: 404px; top: 452px; height: -38px;"
    >
      <div
        class="card"
      >
        <div>
          <table
            class="table"
            style="width: 360px;"
          >
            <tbody>
              <tr
                class="row"
              >
                <td
                  class="cell"
                >
                  <a
                    class="linkified"
                    href="http://google.com"
                    target="_blank"
                  >
                    google.com
                  </a>
                </td>
                <td
                  class="cell"
                >
                  アイコス
                </td>
                <td
                  class="cell"
                >
                  レイガン
                </td>
              </tr>
              <tr
                class="row"
              >
                <td
                  class="cell"
                >
                  理解者
                </td>
                <td
                  class="cell"
                >
                  鉄球の上に
                </td>
                <td
                  class="cell"
                >
                  瓶ビール
                </td>
              </tr>
            </tbody>
          </table>
        </div>
         
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
     
    <!---->
  </div>
   
  <div />
   
  <!---->
</div>
`;

exports[`Storyshots Centered Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    I’m centered
  </div>
</div>
`;

exports[`Storyshots Shortcuts Default 1`] = `<div />`;

exports[`Storyshots Shortcuts Selected 1`] = `<div />`;
